--- a/main.css
+++ b/main.css
@@ -1,11 +1,16 @@
 #product-overview {
-    background: #ff1b68;
+  background: #ff1b68;
 }
 
-h1  {
-    color: white;
-    font-family: 'Anton', sans-serif;
+h1 {
+  color: white;
+  font-family: "Anton", sans-serif;
 }
+
 .section-title {
-    color: #2ddf5c;
+  color: #2ddf5c;
 }
+
+h1 {
+    font-family: sans-serif
+  }
