--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
 #product-overview {
   background: #ff1b68;
 }
@@ -11,6 +15,6 @@ h1 {
   color: #2ddf5c;
 }
 
-h1 {
+/* h1 {
     font-family: sans-serif
-  }
+  } */
