--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -5,11 +9,11 @@ body {
 
 #product-overview {
   background: #ff1b68;
-  padding: 20px;
-  border-style: solid;
-  border-color: black;
-  border-width: 5px;
-  margin: 20px;
+  width: 100%;
+  height:528%;
+  padding: 10px;
+  border: 5px solid black;
+  margin: 10px;
 }
 
 #product-overview h1 {
