--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
 #product-overview {
   background: #ff1b68;
   width: 100%;
-  height:528%;
+  height: 528%;
   padding: 10px;
   border: 5px solid black;
   margin: 10px;
@@ -29,8 +29,27 @@ body {
     font-family: sans-serif
   } */
 
-  .main-header {
-    background: #2ddf5c;
-    padding: 8px 16px;
-    width: 100%;
-  }
+.main-header {
+  background: #2ddf5c;
+  padding: 8px 16px;
+  width: 100%;
+}
+
+.main-header > div {
+  display: inline-block;
+}
+
+.main-nav {
+  display: inline-block;
+  text-align: right;
+  width: calc(100% - 55px) ;
+}
+
+.main-nav__items {
+    margin: 0px;
+    padding: 0px;
+    list-style:none;
+}
+.main-nav__item {
+  display: inline-block;
+}
