--- a/main.css
+++ b/main.css
@@ -37,12 +37,21 @@ body {
 
 .main-header > div {
   display: inline-block;
+  vertical-align: middle;
+}
+
+.main-header__brand {
+    color: #0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 35px;
 }
 
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 55px) ;
+  width: calc(100% - 115px) ;
+  vertical-align: middle;
 }
 
 .main-nav__items {
@@ -50,6 +59,14 @@ body {
     padding: 0px;
     list-style:none;
 }
+
 .main-nav__item {
   display: inline-block;
+  margin: 0 16px;
+  text-decoration: none;
+}
+
+.main-nav__item a {
+    text-decoration: none;
+    color: #0e4f1f;
 }
