--- a/main.css
+++ b/main.css
@@ -41,23 +41,23 @@ body {
 }
 
 .main-header__brand {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 35px;
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 35px;
 }
 
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 115px) ;
+  width: calc(100% - 115px);
   vertical-align: middle;
 }
 
 .main-nav__items {
-    margin: 0px;
-    padding: 0px;
-    list-style:none;
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
 }
 
 .main-nav__item {
@@ -67,6 +67,14 @@ body {
 }
 
 .main-nav__item a {
-    text-decoration: none;
-    color: #0e4f1f;
+  text-decoration: none;
+  color: #0e4f1f;
+}
+
+.main-nav__item a:hover {
+  color: white;
+}
+
+.main-nav__item a:active {
+  color: white;
 }
