--- a/main.css
+++ b/main.css
@@ -79,6 +79,16 @@ body {
   color: white;
 }
 
+.main-nav__item a::after {
+  content: "(Link)";
+  color: #ff1b68;
+}
+
+.main-nav__item a::before {
+  content: "(icon)";
+  color: #ff1b68;
+}
+
 p::first-letter {
   color: red;
   font-size: 20px;
