--- a/main.css
+++ b/main.css
@@ -71,25 +71,9 @@ body {
   color: #0e4f1f;
 }
 
-.main-nav__item a:hover {
-  color: white;
-}
-
+.main-nav__item a:hover,
 .main-nav__item a:active {
   color: white;
 }
 
-.main-nav__item a::after {
-  content: "(Link)";
-  color: #ff1b68;
-}
 
-.main-nav__item a::before {
-  content: "(icon)";
-  color: #ff1b68;
-}
-
-p::first-letter {
-  color: red;
-  font-size: 20px;
-}
