--- a/main.css
+++ b/main.css
@@ -8,12 +8,10 @@ body {
 }
 
 #product-overview {
-  background: #ff1b68;
+  background: url("./freedom.jpg");
   width: 100%;
-  height: 528%;
+  height: 528px;
   padding: 10px;
-  border: 5px solid black;
-  margin: 10px;
 }
 
 #product-overview h1 {
@@ -55,25 +53,39 @@ body {
 }
 
 .main-nav__items {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 .main-nav__item {
   display: inline-block;
   margin: 0 16px;
-  text-decoration: none;
 }
 
 .main-nav__item a {
   text-decoration: none;
   color: #0e4f1f;
+  font-weight: bold;
+  padding: 3px 0;
 }
 
 .main-nav__item a:hover,
 .main-nav__item a:active {
   color: white;
+  border-bottom: 5px solid white;
 }
 
+.main-nav__item--cta a {
+    color: white;
+    background: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
 
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    color:  #ff1b68;
+    background: white;
+    border:none;
+}
