--- a/module-4/main.css
+++ b/module-4/main.css
@@ -17,6 +17,11 @@ a {
 a.active {
     color: #521751;
 }
+
+a:not(.active) {
+    color: blue;
+}
+
 .main-section {
     height: 800px;
     border: 1px solid #ccc !important;
