--- a/main.css
+++ b/main.css
@@ -21,8 +21,18 @@ body {
 
 .section-title {
   color: #2ddf5c;
+  text-align: center;
 }
 
+.plan {
+  background-color: #d5ffdc;
+  text-align: center;
+  padding: 16px;
+  margin: 8px;
+  display: inline-block;
+  width: 30%;
+  vertical-align: middle;
+}
 /* h1 {
     font-family: sans-serif
   } */
