--- a/main.css
+++ b/main.css
@@ -40,6 +40,13 @@ body {
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
+.plan__annotation {
+  background-color: white;
+  color: #19b84c;
+  padding: 8px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .5);
+  border-radius: 4px;
+}
 /* h1 {
     font-family: sans-serif
   } */
