--- a/main.css
+++ b/main.css
@@ -47,6 +47,19 @@ body {
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .5);
   border-radius: 4px;
 }
+
+.paln__features {
+  list-style: none;
+  margin: 0;
+  padding:0;
+}
+
+
+.paln__features li {
+  margin: 8px 0px;
+}
+
+
 /* h1 {
     font-family: sans-serif
   } */
