--- a/main.css
+++ b/main.css
@@ -48,6 +48,20 @@ body {
   border-radius: 4px;
 }
 
+.plan__title {
+  color: #0e4f1f;
+}
+
+.plan__price {
+  color: #858585;
+}
+.plan--highlighted .plan__title {
+  color: white;
+}
+.plan--highlighted .plan__price {
+  color: #0e4f1f;
+}
+
 .paln__features {
   list-style: none;
   margin: 0;
