--- a/main.css
+++ b/main.css
@@ -37,14 +37,14 @@ body {
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .5);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
   background-color: white;
   color: #19b84c;
   padding: 8px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .5);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 4px;
 }
 
@@ -65,14 +65,12 @@ body {
 .paln__features {
   list-style: none;
   margin: 0;
-  padding:0;
+  padding: 0;
 }
-
 
 .paln__features li {
   margin: 8px 0px;
 }
-
 
 /* h1 {
     font-family: sans-serif
@@ -128,15 +126,15 @@ body {
 }
 
 .main-nav__item--cta a {
-    color: white;
-    background: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
+  color: white;
+  background: #ff1b68;
+  padding: 8px 16px;
+  border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
 .main-nav__item--cta a:active {
-    color:  #ff1b68;
-    background: white;
-    border:none;
+  color: #ff1b68;
+  background: white;
+  border: none;
 }
