--- a/main.css
+++ b/main.css
@@ -88,6 +88,11 @@ body {
   background: white;
   color: #0e4f1f;
 }
+
+.button:focus {
+  outline: none;
+}
+
 /* h1 {
     font-family: sans-serif
   } */
