--- a/main.css
+++ b/main.css
@@ -93,6 +93,16 @@ body {
   outline: none;
 }
 
+#key-features {
+  background: #ff1b68;
+  margin-top: 80px;
+  padding: 16px;
+}
+
+#key-features .section-title {
+  color: white;
+  margin: 32px;
+}
 /* h1 {
     font-family: sans-serif
   } */
