--- a/main.css
+++ b/main.css
@@ -199,3 +199,9 @@ body {
   background: white;
   border: none;
 }
+
+.main-footer {
+  background: black;
+  padding: 32px;
+  margin-top: 48px;
+}
