--- a/main.css
+++ b/main.css
@@ -205,3 +205,10 @@ body {
   padding: 32px;
   margin-top: 48px;
 }
+
+.main-footer__links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
