--- a/packages/packages.css
+++ b/packages/packages.css
@@ -48,6 +48,11 @@ main {
     border-left: 4px solid #0e4f1f;
 }
 
+#free:hover,
+#free:active {
+    border-left-color: #ff5454;
+}
+
 #premium {
     background: rgba(14, 79, 31, 0.95);
 }
