--- a/main.css
+++ b/main.css
@@ -10,6 +10,12 @@
   font-family: "Anton", sans-serif;
 }
 
+.plan__list {
+  width:80%;
+  margin: auto;
+  text-align: center
+}
+
 .section-title {
   color: #2ddf5c;
   text-align: center;
