Making package sections relative

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -12,9 +12,10 @@ main {
 
 .package {
   width: 80%;
-  margin: 16px 0;
+  margin: 25px 0;
   border: 4px solid #0e4f1f;
   border-left: none;
+  position: relative;
 }
 
 .package:hover,
@@ -28,6 +29,13 @@ main {
   color: inherit;
   display: block;
   padding: 32px;
+}
+
+.package__badge {
+  position: absolute;
+  top:50px;
+  left: 500px;
+  margin: 20px;
 }
 
 .package_subtitle {
