--- a/packages/packages.css
+++ b/packages/packages.css
@@ -33,9 +33,13 @@ main {
 
 .package__badge {
   position: absolute;
-  top:50px;
-  left: 500px;
+  top:0;
+  right: 0;
   margin: 20px;
+  font-size: 12px;
+  color: white;
+  background: #ff5454;
+  padding: 8px;
 }
 
 .package_subtitle {
