--- a/position-07-introducing-sticky-positioning-starting-code/main.css
+++ b/position-07-introducing-sticky-positioning-starting-code/main.css
@@ -1,22 +1,22 @@
 html {
-  /*background: #b3b3b3;
-    padding: 15px;
-    border: 5px solid white;
-    margin: 15px;*/
+  background: #b3b3b3;
+  padding: 15px;
+  border: 5px solid white;
+  margin: 15px;
   height: 2000px;
 }
 
 body {
-  /*background: #fa923f;
-    padding: 20px;
-    border: 5px solid black;*/
+  background: #fa923f;
+  padding: 20px;
+  border: 5px solid black;
   margin: 0;
 }
 
 .parent {
   background: white;
   padding: 20px;
-  /*border: 5px solid black;*/
+  border: 5px solid black;
   margin: 10px;
 }
 
@@ -27,7 +27,7 @@ body {
   border: 5px solid black;
   margin: 10px;
   position: sticky;
-  top:20px;
+  top: 20px;
 }
 
 .parent .cities {
