--- a/main.css
+++ b/main.css
@@ -3,17 +3,22 @@
   width: 100%;
   height: 528px;
   padding: 10px;
+  margin-top: 43px;
+  position: relative;
 }
 
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .plan__list {
-  width:80%;
+  width: 80%;
   margin: auto;
-  text-align: center
+  text-align: center;
 }
 
 .section-title {
