--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@
   background-size: auto;
   /* background-size: contain;
   background-size: cover; */
+  /* background-position: 0% 0%; */
+  background-position: left 10% bottom 20%;
+  /* background-position: top left; */
+  /* background-position: center; */
   background-repeat: no-repeat;
   width: 100%;
   height: 528px;
