--- a/main.css
+++ b/main.css
@@ -4,14 +4,18 @@
   /* background-size: contain;
   background-size: cover; */
   /* background-position: 0% 0%; */
-  background-position: left 10% bottom 20%;
+  
   /* background-position: top left; */
   /* background-position: center; */
+  background-position: left 10% bottom 20%;
   background-repeat: no-repeat;
+  background-origin: border-box;
+  background-clip: border-box;
   width: 100%;
   height: 528px;
   padding: 10px;
-  margin-top: 43px;
+  margin-top: 59px;
+  border: 5px dashed red;
   position: relative;
 }
 
