--- a/main.css
+++ b/main.css
@@ -11,6 +11,9 @@
   background-repeat: no-repeat;
   background-origin: border-box;
   background-clip: border-box;
+  background-attachment: fixed;
+  /* background-attachment: scroll;
+  background-attachment: local; */
   width: 100%;
   height: 528px;
   padding: 10px;
