--- a/main.css
+++ b/main.css
@@ -1,24 +1,24 @@
 #product-overview {
-  background: url("./freedom.jpg");
-  background-size: auto;
+  background: url("./freedom.jpg") left 10% bottom 20%/cover no-repeat border-box scroll;
+  /* background-size: auto; */
   /* background-size: contain;
   background-size: cover; */
   /* background-position: 0% 0%; */
   
   /* background-position: top left; */
   /* background-position: center; */
-  background-position: left 10% bottom 20%;
-  background-repeat: no-repeat;
+  /* background-position: left 10% bottom 20%; */
+  /* background-repeat: no-repeat;
   background-origin: border-box;
   background-clip: border-box;
-  background-attachment: fixed;
+  background-attachment: fixed; */
   /* background-attachment: scroll;
   background-attachment: local; */
   width: 100%;
   height: 528px;
   padding: 10px;
   margin-top: 59px;
-  border: 5px dashed red;
+  /* border: 5px dashed red; */
   position: relative;
 }
 
