Moving freedom image to folder

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #product-overview {
-  background: url("./freedom.jpg") left 10% bottom 20%/cover no-repeat border-box scroll;
+  background: url("./images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box scroll;
   /* background-size: auto; */
   /* background-size: contain;
   background-size: cover; */
