--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 #product-overview {
-  background: url("./images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box scroll;
+  /* background: url("./images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box scroll; */
   /* background-size: auto; */
   /* background-size: contain;
   background-size: cover; */
   /* background-position: 0% 0%; */
-  
+
   /* background-position: top left; */
   /* background-position: center; */
   /* background-position: left 10% bottom 20%; */
@@ -14,6 +14,13 @@
   background-attachment: fixed; */
   /* background-attachment: scroll;
   background-attachment: local; */
+  background-image: linear-gradient(
+    to left bottom,
+    red 30%,
+    blue,
+    yellow,
+    rgba(0, 0, 0, 0.5)
+  );
   width: 100%;
   height: 528px;
   padding: 10px;
