--- a/main.css
+++ b/main.css
@@ -14,13 +14,7 @@
   background-attachment: fixed; */
   /* background-attachment: scroll;
   background-attachment: local; */
-  background-image: linear-gradient(
-    to left bottom,
-    red 30%,
-    blue,
-    yellow,
-    rgba(0, 0, 0, 0.5)
-  );
+  background-image: radial-gradient(circle at top left, red, blue, green);
   width: 100%;
   height: 528px;
   padding: 10px;
