--- a/main.css
+++ b/main.css
@@ -1,5 +1,8 @@
 #product-overview {
-  /* background: url("./images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box scroll; */
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("./images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box
+      scroll,
+    #ff1b68;
   /* background-size: auto; */
   /* background-size: contain;
   background-size: cover; */
@@ -14,7 +17,7 @@
   background-attachment: fixed; */
   /* background-attachment: scroll;
   background-attachment: local; */
-  background-image: radial-gradient(circle at top left, red, blue, green);
+  /* background-image: radial-gradient(circle at top left, red, blue, green); */
   width: 100%;
   height: 528px;
   padding: 10px;
