--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,14 @@ body {
   margin: 0;
 }
 
+.backdrop {
+  position: relative;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .main-header {
   background: #2ddf5c;
   position: fixed;
@@ -14,7 +22,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
-  z-index:1;
+  z-index: 1;
 }
 
 .main-header > div {
