--- a/shared.css
+++ b/shared.css
@@ -2,9 +2,13 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  height: 100%;
 }
 
 .backdrop {
