--- a/shared.css
+++ b/shared.css
@@ -3,16 +3,16 @@
 }
 
 html {
-  height: 100%;
 }
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  height: 100%;
 }
 
 .backdrop {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 100;
   width: 100%;
   height: 100%;
