--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,5 +1,5 @@
 .testimonial {
-  font-size: 20px;
+  font-size: 1.2em; /* times size of parent font size */
   margin: 48px 0;
 }
 
@@ -45,11 +45,12 @@
 .testimonial__name {
   margin: 3px;
   color: #ff5454;
+  font-size: 2em;
 }
 
 .testimonial__subtitle {
   margin: 0;
-  font-size: 18px;
+  font-size: 1.1rem; /* root size (of html) */
   color: #ccc;
 }
 
