--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
   width: 100%;
   height: 528px;
   padding: 10px;
-  margin-top: 55px;
+  margin-top: 2.75rem;
   /* border: 5px dashed red; */
   position: relative;
 }
@@ -48,8 +48,8 @@
 .plan {
   background-color: #d5ffdc;
   text-align: center;
-  padding: 16px;
-  margin: 8px;
+  padding: 1rem;
+  margin: 0.5rem;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
@@ -64,9 +64,9 @@
 .plan__annotation {
   background-color: white;
   color: #19b84c;
-  padding: 8px;
+  padding: 0.5rem;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .plan__title {
@@ -76,9 +76,11 @@
 .plan__price {
   color: #858585;
 }
+
 .plan--highlighted .plan__title {
   color: white;
 }
+
 .plan--highlighted .plan__price {
   color: #0e4f1f;
 }
@@ -90,18 +92,18 @@
 }
 
 .paln__features li {
-  margin: 8px 0px;
+  margin: 0.5rem 0;
 }
 
 #key-features {
   background: #ff1b68;
-  margin-top: 80px;
-  padding: 16px;
+  margin-top: 5rem;
+  padding: 1rem;
 }
 
 #key-features .section-title {
   color: white;
-  margin: 32px;
+  margin: 2rem;
 }
 
 .key-features {
@@ -124,14 +126,14 @@
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
-  padding: 20px;
+  padding: 1.5rem;
 }
 
 .key-feature__description {
   text-align: center;
   font-weight: bold;
   color: white;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 /* h1 {
