--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("./images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box
+    url("./images/freedom.jpg") left 10% bottom 75% / cover no-repeat border-box
       scroll,
     #ff1b68;
   /* background-size: auto; */
@@ -18,8 +18,8 @@
   /* background-attachment: scroll;
   background-attachment: local; */
   /* background-image: radial-gradient(circle at top left, red, blue, green); */
-  width: 100%;
-  height: 528px;
+  width: 100vw;
+  height: 40vh;
   padding: 10px;
   margin-top: 2.75rem;
   /* border: 5px dashed red; */
