--- a/shared.css
+++ b/shared.css
@@ -38,6 +38,28 @@ body {
   vertical-align: middle;
 }
 
+.toggle-button {
+  width: 3rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding-top: 0;
+  padding-bottom: 0;
+  vertical-align: middle;
+}
+
+.toggle-button:focus {
+  outline: none;
+}
+
+.toggle-button__bar {
+  width: 100%;
+  height: 0.2rem;
+  background: black;
+  display: block;
+  margin: 0.6rem 0;
+}
+
 .main-header__brand {
   color: #0e4f1f;
   text-decoration: none;
@@ -45,6 +67,7 @@ body {
   font-size: 1.5rem;
   height: 1.5rem;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .main-header__brand img {
