--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("./images/freedom.jpg") left 10% bottom 75% / cover no-repeat border-box
-      scroll,
+    url("./images/freedom.jpg") center/cover no-repeat border-box scroll,
     #ff1b68;
   /* background-size: auto; */
   /* background-size: contain;
@@ -45,22 +44,10 @@
   }
 }
 
-@media (min-width: 60rem) {
-  #product-overview {
-    height: 60vh;
-    background-position: 50% 25%;
-  }
-  #product-overview h1 {
-    font-size: 5rem;
-  }
-}
-
-
-.plan__list {
-  width: 80%;
-  margin: auto;
+/* .plan__list {
+  width: 100%;
   text-align: center;
-}
+} */
 
 .section-title {
   color: #2ddf5c;
@@ -71,16 +58,14 @@
   background-color: #d5ffdc;
   text-align: center;
   padding: 1rem;
-  margin: 0.5rem;
-  display: inline-block;
-  width: 30%;
-  vertical-align: middle;
+  margin: 0.5rem 0;
+  width: 100%;
 }
 
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5); */
 }
 
 .plan__annotation {
