--- a/main.css
+++ b/main.css
@@ -44,11 +44,6 @@
   }
 }
 
-/* .plan__list {
-  width: 100%;
-  text-align: center;
-} */
-
 .section-title {
   color: #2ddf5c;
   text-align: center;
@@ -100,6 +95,25 @@
 
 .paln__features li {
   margin: 0.5rem 0;
+}
+
+@media (min-width: 40rem) {
+  .plan__list {
+    width: 100%;
+    text-align: center;
+  }
+
+  .plan {
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+    min-width: 12.75rem;
+    max-width: 25rem;
+  }
+
+  .plan--highlighted {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  }
 }
 
 #key-features {
