--- a/main.css
+++ b/main.css
@@ -97,25 +97,6 @@
   margin: 0.5rem 0;
 }
 
-@media (min-width: 40rem) {
-  .plan__list {
-    width: 100%;
-    text-align: center;
-  }
-
-  .plan {
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
-    min-width: 12.75rem;
-    max-width: 25rem;
-  }
-
-  .plan--highlighted {
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-  }
-}
-
 #key-features {
   background: #ff1b68;
   margin-top: 5rem;
@@ -135,9 +116,7 @@
 }
 
 .key-feature {
-  display: inline-block;
-  width: 33%;
-  vertical-align: top;
+  list-style: none;
 }
 
 .key-feature__image {
@@ -155,6 +134,32 @@
   font-weight: bold;
   color: white;
   font-size: 1.2rem;
+}
+
+@media (min-width: 40rem) {
+  .plan__list {
+    width: 100%;
+    text-align: center;
+  }
+
+  .plan {
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+    min-width: 12.75rem;
+    max-width: 25rem;
+  }
+
+  .plan--highlighted {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  }
+
+  .key-feature {
+    display: inline-block;
+    width: 30%;
+    max-width: 25rem;
+    vertical-align: top;
+  }
 }
 
 /* h1 {
