--- a/main.css
+++ b/main.css
@@ -34,7 +34,8 @@
   font-size: 1.6rem;
 }
 
-@media (min-width: 40rem) {
+/* @media (min-width: 40rem) and (orientation: portrait)  */
+@media (min-width: 40rem) and (min-height: 60rem) {
   #product-overview {
     height: 50vh;
     background-position: 50% 25%;
@@ -136,7 +137,7 @@
   font-size: 1.2rem;
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 40rem) and (orientation: landscape) {
   .plan__list {
     width: 100%;
     text-align: center;
