--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,11 +1,5 @@
 .testimonial {
   font-size: 1.2em; /* times size of parent font size */
-  margin: 3rem 0;
-}
-
-.testimonial__list {
-  width: 80%;
-  margin: auto;
 }
 
 .testimonial:first-of-type {
@@ -13,11 +7,8 @@
 }
 
 .testimonial__image-container {
-  width: 65%;
-  max-width: 580px;
-  /* min-width: 350px; */
-  display: inline-block;
-  vertical-align: middle;
+  width: 100%;
+  max-width: 40rem;
   box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
@@ -29,9 +20,6 @@
 .testimonial__info {
   text-align: right;
   padding: 0.9rem;
-  display: inline-block;
-  vertical-align: middle;
-  width: 30%;
 }
 
 #customer-2.testimonial {
@@ -66,4 +54,24 @@
 
 .testimonial__text {
   margin: 0.2rem;
+}
+
+@media (min-width: 40rem) {
+  .testimonial {
+    margin: 3rem auto;
+    max-width: 1500px;
+  }
+
+  .testimonial__image-container {
+    width: 65%;
+    min-width: 350px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .testimonial__info {
+    display: inline-block;
+    vertical-align: middle;
+    width: 30%;
+  }
 }
