--- a/packages/packages.css
+++ b/packages/packages.css
@@ -34,7 +34,7 @@ main {
 
 .package__badge {
   position: absolute;
-  top:0;
+  top: 0;
   right: 0;
   margin: 1.2rem;
   font-size: 0.8rem;
@@ -84,4 +84,26 @@ main {
 
 #premium .package_subtitle {
   color: #bbb;
+}
+
+@media (min-width: 40rem) {
+  main {
+    margin: 3rem auto;
+    max-width: 1500px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .package {
+    border-left: 4px solid #0e4f1f;
+  }
+
+  #free {
+    border-right: 4px solid #0e4f1f;
+  }
+
+  #free:hover,
+  #free:active {
+    border-right-color: #ff5454;
+  }
 }
