--- a/packages/packages.css
+++ b/packages/packages.css
@@ -88,8 +88,9 @@ main {
 
 @media (min-width: 40rem) {
   main {
-    margin: 3rem auto;
     max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
