--- a/start-hosting/start-hosting.css
+++ b/start-hosting/start-hosting.css
@@ -28,9 +28,10 @@ main {
 .signup-form input[id*="terms"] + label {
   display: inline-block;
   width: auto;
+  vertical-align: bottom;
 }
 
-.signup-form input,
+.signup-form input:not([type="checkbox"]),
 .signup-form select {
   border: 1px solid #ccc;
   padding: 0.2rem 0.5rem;
@@ -39,9 +40,25 @@ main {
 
 .signup-form input:focus,
 .signup-form select:focus {
-    outline: none;
-    background: #d8f3df;
+  outline: none;
+  background: #d8f3df;
+  border-color: #2ddf5c;
+}
 
+.signup-form input[type="checkbox"] {
+  border: 1px solid #ccc;
+  background: white;
+  width: 1rem;
+  height: 1rem;
+  /* disable browser specific */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.signup-form input[type="checkbox"]:checked {
+  background: #2ddf5c;
+  border: #0e4f1f;
 }
 
 .signup-form button[type="submit"] {
