--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "AnonymousPro";
+  src: url("AnonymousPro-Regular.ttf");
+}
 main {
   padding-top: 2rem;
 }
@@ -53,9 +57,7 @@ main {
   font-size: 1.2rem;
   color: #0e4f1f;
   background: white;
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-style: italic;
+  font-family: "AnonymousPro", sans-serif;
 }
 
 .clearfix {
