Adding font weight to custom fonts

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -2,6 +2,13 @@
   font-family: "AnonymousPro";
   src: url("AnonymousPro-Regular.ttf");
 }
+
+@font-face {
+  font-family: "AnonymousPro";
+  src: url("AnonymousPro-Bold.ttf");
+  font-weight: 700;
+}
+
 main {
   padding-top: 2rem;
 }
@@ -58,6 +65,7 @@ main {
   color: #0e4f1f;
   background: white;
   font-family: "AnonymousPro", sans-serif;
+  font-weight: 700;
 }
 
 .clearfix {
