--- a/packages/packages.css
+++ b/packages/packages.css
@@ -66,6 +66,7 @@ main {
   background: white;
   font-family: "AnonymousPro", sans-serif;
   font-weight: 700;
+  /* line-height: 1; */
 }
 
 .clearfix {
