--- a/flexbox-02-creating-a-flex-container-starting-code/main.css
+++ b/flexbox-02-creating-a-flex-container-starting-code/main.css
@@ -20,7 +20,12 @@ body {
     border: 5px solid black;
     display: flex;
     flex-direction: row;
+    height: 1300px;
     flex-wrap: wrap;
+     /* short hand for flex-direction: and flex-wrap: */
+    /* flex-flow: row wrap */
+    align-items: center;
+    justify-content: center;
   }
 
 .item-1 {
